--- a/carts/templates/carts/cart_modal.html
+++ b/carts/templates/carts/cart_modal.html
@@ -14,8 +14,8 @@
           <div id="modal-cart-item-{{ cart.id }}" class="d-flex justify-content-between cart_menu_item">
             <div class="cart_menu_item_img">
               <a href="{% url "goods:product" cart.product.slug %}">
-                {% if cart.product.images.all.0.image.url %}
-                  <img class="w-100" src="{{ cart.product.images.all.0.image }}" alt={{ cart.product.name }}>
+                {% if cart.product.images.all.0.image %}
+                  <img class="w-100" src="{{ cart.product.images.all.0.image.url }}" alt={{ cart.product.name }}>
                 {% else %}
                   <img class="w-100" src="{% static "images/no-product-image.jpg" %}" alt="No Product Image">
                 {% endif %}
