--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -5,33 +5,61 @@
 {% block content %}
 			<div class="row justify-content-between align-items-lg-start mb-5 mb-lg_8">   
                 <div class="col-12 col-lg-7 product_image_block">
-                    <div id="carousel" class="carousel slide">
-                        <div class="d-flex d-lg-none carousel-indicators">
-                            {% for image in product.images.all %}
-                                <button type="button" 
-                                        data-bs-target="#carousel" 
-                                        data-bs-slide-to="{{ forloop.counter0 }}" 
-                                        class="{% if forloop.first %}active{% endif %}" 
-                                        aria-current="{% if forloop.first %}true{% endif %}" 
-                                        aria-label="Slide {{ forloop.counter }}">
-                                </button>
-                            {% endfor %}
-                        </div>
-
-                        <div class="d-block d-lg-flex flex-lg-wrap carousel-inner">
-                            {% for image in product.images.all %}
-                                <div class="carousel-item {% if forloop.first %}active{% endif %} {% if image.layout == 'large' %}col-lg-12{% else %}col-lg-6{% endif %}">
-                                    {% if image.image %}
+                    <div class="collection_slider_block">
+                        
+                        <!-- Мобильная версия с каруселью -->
+                        <div id="productCarousel" class="carousel slide d-lg-none" data-bs-interval="5000" data-bs-touch="true" data-bs-ride="carousel">
+                            
+                            <!-- Индикаторы карусели -->
+                            <div class="carousel-indicators">
+                                {% for image in product.images.all %}
+                                    <button type="button" data-bs-target="#productCarousel" 
+                                            data-bs-slide-to="{{ forloop.counter0 }}" 
+                                            class="{% if forloop.first %}active{% endif %}" 
+                                            aria-current="{% if forloop.first %}true{% endif %}" 
+                                            aria-label="Slide {{ forloop.counter }}">
+                                    </button>
+                                {% endfor %}
+                            </div>
+                    
+                            <!-- Слайды карусели -->
+                            <div class="carousel-inner">
+                                {% for image in product.images.all %}
+                                    <div class="carousel-item {% if forloop.first %}active{% endif %}">
                                         <img src="{{ image.image.url }}" class="d-block w-100" alt="{{ product.name }}">
-                                    {% else %}
+                                    </div>
+                                {% empty %}
+                                    <div class="carousel-item active">
                                         <img src="{% static 'images/no-product-image.jpg' %}" class="d-block w-100" alt="No Product Image">
-                                    {% endif %}
-                                </div>
-                            {% empty %}
-                                <div class="carousel-item active col-lg-12">
-                                    <img src="{% static 'images/no-product-image.jpg' %}" class="d-block w-100" alt="No Product Image">
-                                </div>
-                            {% endfor %}
+                                    </div>
+                                {% endfor %}
+                            </div>
+                    
+                            <!-- Кнопки управления каруселью -->
+                            <button class="carousel-control-prev" type="button" data-bs-target="#productCarousel" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Предыдущий</span>
+                            </button>
+                    
+                            <button class="carousel-control-next" type="button" data-bs-target="#productCarousel" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Следующий</span>
+                            </button>
+                        </div>
+                    
+                        <!-- Десктопная версия с сеткой изображений -->
+                        <div class="d-none d-lg-block">
+                            <div class="row">
+                                {% for image in product.images.all %}
+                                    <div class="{% if image.layout == 'large' %}col-lg-12{% else %}col-lg-6{% endif %} mb-3">
+                                        <img src="{{ image.image.url }}" class="img-fluid" alt="{{ product.name }}">
+                                    </div>
+                                {% empty %}
+                                    <div class="col-lg-12">
+                                        <img src="{% static 'images/no-product-image.jpg' %}" class="img-fluid" alt="No Product Image">
+                                    </div>
+                                {% endfor %}
+                            </div>
                         </div>
                     </div>
                 </div>
