--- a/main/templates/main/info_base.html
+++ b/main/templates/main/info_base.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <div class="mb_3_8 mb-lg_6">
+    <div class="editor-content mb_3_8 mb-lg_6">
         {{ page.content|safe }}
     </div>
 
